Add some Swagger documentation for users api
